--- a/style.css
+++ b/style.css
@@ -18,4 +18,25 @@ body {
     padding-top: 500px;
     color: white;
     font-size: 1.5em;
+    font-weight: 100;
+}
+
+#type-box:after {
+    content: "";
+    display: inline-block;
+    background-color: white;
+    width: 1px;
+    height: 26px;
+    vertical-align: -3.3px;
+    margin-left: 7px;
+    animation: 0.5s infinite shine;
+}
+
+@keyframes shine {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
 }
